# uiua-in-rust

./: Cargo.toml  ReadMe.md
src/: array.rs  dyadic_arith.rs  elems.rs  lib.rs  main.rs  monadic_modifier.rs  perform.rs  perform_array.rs  perform_dyadic_arith.rs  perform_monadic_modifier.rs  perform_stack_manipulation.rs  stack.rs  stack_calc.rs  stack_manipulation.rs  uiua_macros.rs
